--- a/app/views/stations/index.html.erb
+++ b/app/views/stations/index.html.erb
@@ -38,6 +38,10 @@
 
     <script>
 
+    let testPlaces = <%== @stations.to_json %>;
+    console.log("This is test places: ", testPlaces)
+
+
     let state = {lat: -33.87, lng: 151.20}
 
     let map;
@@ -46,6 +50,11 @@
         center: {lat: state.lat, lng: state.lng},
         zoom: 15
       });
+      marker = new google.maps.Marker ({
+        position: {lat: state.lat, lng: state.lng},
+        map: map,
+        label: "here"
+      })
 
       console.log($('#map').data('places') )
 
@@ -71,73 +80,3 @@
     </script>
 
  <% end %>
-
-<!-- n = $('#rotatingElement').data('electrons')
-init(n);
-
- -->
-
-
- <!-- This div is probably not really necesary, I could just as easily get the data from the <li> tag for electrons.
- But I wanted to practice using the data tag in html to move the data around. -->
-
-
-
-
-
-<!--
-<div id="map" class="map"></div>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAx0puTw7E8bC4pBffCMCTsL9VPjTD6Hjw&callback=initialize"
-async defer></script>
-
-<script>
-let dialects = <%== @dialects.to_json %>;
-console.log(dialects[0].region);
-let geocoder;
-let map;
-function initialize() {
-  geocoder = new google.maps.Geocoder();
-  let latlng = new google.maps.LatLng(24.0889, 32.8998);
-  let mapOptions = {
-    zoom: 4,
-    center: latlng
-  }
-  map = new google.maps.Map(document.getElementById('map'), mapOptions);
-  codeAddress();
-};
-
-function codeAddress() {
-  let baghdad = dialects[0].region;
-  geocoder.geocode( { 'address': baghdad }, function(results, status) {
-    if (status == 'OK') {
-      let marker = new google.maps.Marker({
-          map: map,
-          url: '/dialects/1',
-          position: results[0].geometry.location
-      });
-      google.maps.event.addListener(marker, 'click', function() {
-      window.location.href = marker.url});
-    } else {
-      alert('Geocode was not successful for the following reason: ' + status);
-    }
-  });
-
-  let ndjamena = dialects[1].region;
-  geocoder.geocode( { 'address': ndjamena }, function(results, status) {
-    if (status == 'OK') {
-      let marker = new google.maps.Marker({
-          map: map,
-          url: '/dialects/2',
-          position: results[0].geometry.location
-      });
-      google.maps.event.addListener(marker, 'click', function() {
-      window.location.href = marker.url});
-    } else {
-      alert('Geocode was not successful for the following reason: ' + status);
-    }
-  });
-
-
-
-};
-</script> -->
